--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1605,10 +1605,10 @@ a:only-of-type > .remove {
   opacity: 1;
 }
 /* AdBlock Minus */
-.block-ads .bottomad + hr,
-.block-ads .topad,
-.block-ads .middlead,
-.block-ads .bottomad {
+.hide-ads .bottomad + hr,
+.hide-ads .topad,
+.hide-ads .middlead,
+.hide-ads .bottomad {
   display: none;
 }
 .shrink-ads .topad a img,
