--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -355,31 +355,6 @@ th {
   width: 100%;
   overflow: auto;
 }
-/* Main Menu */
-#main-menu {
-  margin: 0;
-  border: 2px solid;
-  border-radius: 10px;
-  height: 14px;
-  width: 14px;
-  <%= sizing %>: border-box;
-  border-color: rgb(130,130,130);
-  color: rgb(130,130,130);
-}
-#main-menu::after {
-  content: '';
-  font-size: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  <%= agent %>transform: translate(-60%, -50%);
-  display: block;
-  border-top: 5px solid rgb(130, 130, 130);
-  border-left: 3px solid transparent;
-  border-right: 3px solid transparent;
-  width: 7px;
-  <%= sizing %>: border-box;
-}
 /* Updater / Thread Stats */
 .float #thread-stats,
 .float #updater {
@@ -1622,6 +1597,88 @@ a:only-of-type > .remove {
 .shrink-ads .bottomad a img {
   width: 500px;
   height: auto;
+}
+/* Mascot Positions */
+#mascot {
+  display: none;
+}
+#mascot img {
+  position: fixed;
+  z-index: -1;
+  bottom: 18.5em;
+  cursor: pointer;
+  left: 0;
+  right: 0;
+}
+.mascots #mascot {
+  display: block;
+}
+.sidebar-location-left #mascot img {
+  <%= sizing %>transform: scaleX(-1);
+}
+.sidebar-location-right.mascot-location-sidebar #mascot img,
+.sidebar-location-left.mascot-location-opposite #mascot img {
+  left: auto;
+}
+.sidebar-location-left.mascot-location-sidebar #mascot img,
+.sidebar-location-right.mascot-location-opposite #mascot img {
+  right: auto;
+}
+.fourchan-ss-navigation.bottom.fixed.posting-disabled #mascot img,
+.fourchan-ss-navigation.bottom.fixed.mascot-position-bottom #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.mascot-position-bottom #mascot img,
+.fourchan-ss-navigation.bottom.fixed:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot img {
+  bottom: 1.5em;
+}
+.fourchan-ss-navigation.bottom.fixed.post-form-style-fixed #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-fixed #mascot img,
+.fourchan-ss-navigation.bottom.fixed.post-form-style-transparent-fade #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-transparent-fade #mascot img {
+  bottom: 20.1em;
+}
+.post-form-style-fixed.show-post-form-header #mascot img,
+.post-form-style-transparent-fade.show-post-form-header #mascot img,
+.fourchan-ss-navigation.bottom.fixed.post-form-style-fixed.post-form-decorations #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-fixed.post-form-decorations #mascot img,
+.fourchan-ss-navigation.bottom.fixed.post-form-style-transparent-fade.post-form-decorations #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-transparent-fade.post-form-decorations #mascot img {
+  bottom: 20.3em;
+}
+.fourchan-ss-navigation.bottom.fixed.show-post-form-header.post-form-style-fixed #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.show-post-form-header.post-form-style-fixed #mascot img,
+.fourchan-ss-navigation.bottom.fixed.show-post-form-header.post-form-style-transparent-fade #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.show-post-form-header.post-form-style-transparent-fade #mascot img {
+  bottom: 21.6em;
+}
+.fourchan-ss-navigation.bottom.fixed.post-form-style-fixed.post-form-decorations.show-post-form-header #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-fixed.post-form-decorations.show-post-form-header #mascot img,
+.fourchan-ss-navigation.bottom.fixed.post-form-style-transparent-fade.post-form-decorations.show-post-form-header #mascot img,
+.fourchan-ss-navigation.index.pagination-sticky-bottom.post-form-style-transparent-fade.post-form-decorations.show-post-form-header #mascot img {
+  bottom: 21.8em;
+}
+.post-form-style-fixed.post-form-decorations #mascot img,
+.post-form-style-transparent-fade.post-form-decorations #mascot img {
+  bottom: 18.8em;
+}
+.mascot-position-default:not(.post-form-style-fixed):not(.post-form-style-transparent-fade) #mascot img,
+.mascot-position-bottom #mascot img,
+.mascot-position-default.posting-disabled #mascot img {
+  bottom: 0;
+}
+.mascots-overlap-posts #mascot img {
+  z-index: 3;
+}
+.mascot-position-middle #mascot img {
+  bottom: 50% !important;
+  <%= agent %>transform: translateY(50%);
+}
+.mascot-position-top #mascot img {
+  bottom: auto !important;
+  top: 17px;
+}
+.grayscale-mascots #mascot img {
+  <%= filter %>: url('#grayscale');
 }
 /* Options */
 #overlay {
