--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -2120,9 +2120,15 @@ article li {
   text-align: center;
 }
 #doc {
-  margin: 0 auto;
-  width: 1000px;
+  <%= sizing %>: border-box;
+  margin: 10px auto;
+  width: 1006px;
+  padding: 2px;
   position: relative;
+}
+.rounded-edges #doc,
+.rounded-edges #doc div {
+  border-radius: 3px;
 }
 #boards .boxcontent {
   vertical-align: top;
@@ -2130,17 +2136,20 @@ article li {
 }
 #filter-container,
 #options-container {
-  float: right;
-  position: relative;
+  top: 4px;
+  right: 8px;
+  position: absolute;
 }
-#optionssmenu {
+#filtermenu,
+#optionsmenu {
   top: 100% !important;
-  left: 0 !important;
+  left: auto !important;
+  right: 0 !important;
 }
 #boards .column {
   <%= sizing %>: border-box;
   display: inline-block;
-  width: 16em;
+  width: 180px;
   text-align: left;
   vertical-align: top;
 }
@@ -2148,6 +2157,7 @@ article li {
 .boxcontent ul {
   vertical-align: top;
   padding: 0;
+  margin: 0;
 }
 .right-box .boxcontent ul {
   padding: 0 10px;
@@ -2156,8 +2166,31 @@ article li {
 .boxcontent li {
   list-style-type: none;
 }
-.bd ul {
+.boxbar {
+  position: relative;
+}
+#doc h3,
+.boxbar h2 {
   margin: 0;
+}
+#doc h3 {
+  text-decoration: none !important;
+}
+.underline-links #doc h3 {
+  text-decoration: underline !important;
+}
+#ft,
+.box-outer {
+  margin: 2px 0 0;
+  overflow: hidden;
+}
+#ft,
+.boxbar,
+.boxcontent {
+  padding: 0 8px;
+}
+.yui-module {
+  position: absolute;
 }
 .yuimenuitem::before {
   content: " [ ] ";
@@ -2166,11 +2199,17 @@ article li {
 .yuimenuitem-checked::before {
   content: " [x] "
 }
+.yui-g {
+  overflow: hidden;
+}
 .yui-u {
   display: inline-block;
   vertical-align: top;
-  width: 475px;
-  margin: 10px;
+  width: 499px;
+  float: right;
+}
+.yui-u.first {
+  float: left;
 }
 #recent-images .boxcontent {
   text-align: center;
